2009-02-15  Tao Wang  <dancefire@gmail.com>

	* Rename cpp/include/openclas/*.h to *.hpp.

﻿2009-02-15  Tao Wang  <dancefire@gmail.com>

	* Move cpp/src/* to cpp/src/unit_test/*.

2009-02-15  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/segment.h: Add workaround code to undef VC max(a,b) macro.
	And add global namespace for log() to avoid make it confuse with boost::unit_test::log
	* cpp/include/openclas/utility.h: Make WORD_TAG_NAME to all little-case
	And add static to NUMBER_PREFIXS.
	* cpp/src/OpenClas_VS2005.vcproj:
	* cpp/src/OpenClas_VS2008.vcproj: 
	* cpp/src/test.cpp:
	* cpp/src/unit_test_dictionary.hpp:
	* cpp/src/unit_test_k_shortest_path.hpp:
	* cpp/src/unit_test_segment.hpp:
	* cpp/src/unit_test_serialization.hpp:
	* cpp/src/unit_test_utility.hpp:
	* cpp/src/unit_test_viterbi.hpp: Using Boost.Test do the regression test.
	Added test cases for utility.

2009-02-13  Tao Wang  <dancefire@gmail.com>

	* include/openclas/segment.h:
	* include/openclas/serialization.h:
	* include/openclas/utility.h:
	Put pku::* to namespace openclas and remove namespace pku. Since 
	pku is spreaded many places, it may not be introduce another tag system.
	Remove class ValueCheck, use the function version instead.
	Rename within() to in_range()
	Rename is_inside() to exist(), and make the function works for 
	zero-terminated	string.
	Add doxygen style comments for each function. (just for try).

2009-02-13  Tao Wang  <dancefire@gmail.com>

	* include/openclas/common.h:
	* include/openclas/dictionary.h:
	* include/openclas/segment.h:
	* include/openclas/serialization.h:
	* include/openclas/utility.h: Remove typedef char_type and string_type, 
	use the original type instead.